RESOLVED FIXED125065
Fix EFL build with INPUT_TYPE_COLOR disabled
https://bugs.webkit.org/show_bug.cgi?id=125065
Summary Fix EFL build with INPUT_TYPE_COLOR disabled
Peter Molnar
Reported 2013-12-02 01:02:37 PST
"using namespace WebCore;" is used in Source/WebKit2/UIProcess/API/efl/ewk_color_picker.cpp, because class Color is defined in WebCore namespace. But if ENABLE(INPUT_TYPE_COLOR) is false there is no WebCore namespace in Source/WebKit2/UIProcess/API/efl/ewk_color_picker.cpp and the build fails.
Attachments
Patch (1.17 KB, patch)
2013-12-02 01:03 PST, Peter Molnar
no flags
Peter Molnar
Comment 1 2013-12-02 01:03:52 PST
Zoltan Herczeg
Comment 2 2013-12-03 04:39:10 PST
Comment on attachment 218150 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-12-03 04:41:39 PST
Comment on attachment 218150 [details] Patch Clearing flags on attachment: 218150 Committed r160000: <http://trac.webkit.org/changeset/160000>
WebKit Commit Bot
Comment 4 2013-12-03 04:41:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.