Fix EFL build with INPUT_TYPE_COLOR disabled. https://bugs.webkit.org/show_bug.cgi?id=125065

Patch by Peter Molnar <pmolnar.u-szeged@partner.samsung.com> on 2013-12-03
Reviewed by Zoltan Herczeg.

* UIProcess/API/efl/ewk_color_picker.cpp:

Canonical link: https://commits.webkit.org/143240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160000 268f45cc-cd09-0410-ab3c-d52691b4dbfc